-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.1
-
Windows
-
fd2eb070128ab6ef6b5c9343a0921f6b5a0bc041 (4.8), cfb44c6528b2518274bf157388832d1d610ce0e4 (5.0)
QFileInfo::completeBaseName() returns the wrong basename if the file name starts with a letter then a : on Windows. E.g: e:base.ext1.ext2 will return base.ext1.ext2 and not base.ext1. This is a regression against Qt 4.7.x